added LM Stuido support

--- a/lifai/config/app_settings.json
+++ b/lifai/config/app_settings.json
@@ -1,1 +1,1 @@
-{"last_model": "hf.co/bartowski/Ministral-8B-Instruct-2410-GGUF:Q8_0"}
+{"last_model": "qwen2.5-3b-instruct", "backend": "lmstudio"}
