--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,19 @@ PyQt6-Qt6>=6.6.1
 PyQt6-sip>=13.6.0
 pyqtgraph>=0.13.3
 GPUtil>=1.4.0
+markdown>=3.5.1
+python-dotenv>=1.0.0
+numpy>=1.24.0
+pillow>=10.1.0
+openai>=1.3.0
+tiktoken>=0.5.1
+langchain>=0.0.350
+langchain-community>=0.0.10
+langchain-core>=0.1.10
+chromadb>=0.4.18
+sentence-transformers>=2.2.2
+torch>=2.1.0
+transformers>=4.36.0
+langchain-huggingface>=0.0.10
+langchain-chroma>=0.0.10
+faiss-cpu>=1.7.4
