--- a/lifai/config/app_settings.json
+++ b/lifai/config/app_settings.json
@@ -1,1 +1,1 @@
-{"last_model": "granite-3.1-8b-instruct", "backend": "lmstudio"}
+{"last_model": "granite-3.1-3b-a800m-instruct", "backend": "lmstudio"}
