Update app settings and standardize prompt configuration. Changed last model in app_settings.json to 'falcon3-3b-instruct' and backend to 'lmstudio'. Updated prompt.py to use consistent capitalization for boolean values in llm_prompts.

--- a/lifai/config/app_settings.json
+++ b/lifai/config/app_settings.json
@@ -1,1 +1,1 @@
-{"last_model": "hf.co/bartowski/Falcon3-3B-Instruct-GGUF:Q4_K_L", "backend": "ollama"}
+{"last_model": "falcon3-3b-instruct", "backend": "lmstudio"}
