--- a/lifai/config/app_settings.json
+++ b/lifai/config/app_settings.json
@@ -1,1 +1,1 @@
-{"last_model": "falcon3-10b-instruct", "backend": "lmstudio"}
+{"last_model": "deepseek-r1-distill-llama-8b", "backend": "lmstudio"}
