--- a/lifai/config/app_settings.json
+++ b/lifai/config/app_settings.json
@@ -1,1 +1,1 @@
-{"last_model": "granite-3.3-8b-instruct", "backend": "lmstudio"}
+{"last_model": "granite-3.3-8b-instruct@q4_k_m", "backend": "lmstudio"}
